@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Lib.Harmony" version="1.2.0.1" targetFramework="net35" />
+  <package id="CitiesHarmony.API" version="1.0.4" targetFramework="net35" />
+  <package id="Lib.Harmony" version="2.0.0.9" targetFramework="net35" />
 </packages>
