@@ -11,6 +11,7 @@
 - Fix automatic workplace allocation sometimes not correctly identifying current level in options editor
 - Fix 'Leisure' and 'Tourism' tooltips being swapped around
 - Standardise lighting for builiding preview renders
+- Migrate to Harmony 2
 - Remove redundant CalculateHomeCount Harmony patch
 - Code cleanup
 
